# chronoscript

./: .gitignore  README.md  environment.yml
docs/: pnpm-lock.yaml
docs/docs/: converter.md
src/: Timetable.py  converter.py  create_json.py  output.csv  parse_times.py  pyproject.toml  test.py  timetable.json  timetables.py  visualize.py
src/files/: my_timetables.json  output.csv  timetable.json
