[tool.poetry]
name = "chronoscript"
version = "0.1.0"
description = ""
authors = ["majimearun <arunachala0619@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.9.0"
pandas = "^2.0.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
